GPencil: Mirror is inconsistent with Mesh Mirror #78527

Closed
opened 2020-07-02 11:28:16 +02:00 by Philip Holzmann · 7 comments

System Information
Operating system: Windows 10 64 bit

Blender Version
Broken: 2.80.1 release, 2.90 alpha 52b125a790
Worked:

Short description of error
The Grease Pencil Mirror modifier does not have the same results as the Mirror Modifier on other object types (Mesh, Curve, etc)

Exact steps for others to reproduce the error
gp_mirror.blend

Both Suzannes are mirrored by the Empty in the middle.
The Empty is rotated by 90° around the X axis.
The mirror axis is also X, so this should not affect the mirror operation.

As you can see, the mesh Suzanne is not upside down, but the Grease Pencil is.

**System Information** Operating system: Windows 10 64 bit **Blender Version** Broken: 2.80.1 release, 2.90 alpha 52b125a790e3 Worked: **Short description of error** The Grease Pencil Mirror modifier does not have the same results as the Mirror Modifier on other object types (Mesh, Curve, etc) **Exact steps for others to reproduce the error** [gp_mirror.blend](https://archive.blender.org/developer/F8659351/gp_mirror.blend) Both Suzannes are mirrored by the Empty in the middle. The Empty is rotated by 90° around the X axis. The mirror axis is also X, so this should not affect the mirror operation. As you can see, the mesh Suzanne is not upside down, but the Grease Pencil is.

Added subscriber: @Foaly

Added subscriber: @Foaly
Antonio Vazquez changed title from Grease Pencil Mirror is inconsistent with Mesh Mirror to GPencil: Mirror is inconsistent with Mesh Mirror 2020-07-02 16:47:36 +02:00
Antonio Vazquez self-assigned this 2020-07-02 16:47:36 +02:00

Changed status from 'Needs Triage' to: 'Confirmed'

Changed status from 'Needs Triage' to: 'Confirmed'

This issue was referenced by a4fe8ef236

This issue was referenced by a4fe8ef236b65210ef04945be7f3936757015b7f

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'

Tested with commit 85980743b0
Date: Thu Jul 2 10:16:54 2020 -0600

Please reopen this.
This is still not solved:
gp_mirror2.blend

Both Suzannes now have the same location.

I animated the empty to illustrate the issue.
For some frames, the mirrored Suzannes match, for some they do not.

Tested with commit 85980743b058e287f1d6400a64dcc60f87fad000 Date: Thu Jul 2 10:16:54 2020 -0600 Please reopen this. This is still not solved: [gp_mirror2.blend](https://archive.blender.org/developer/F8660166/gp_mirror2.blend) Both Suzannes now have the same location. I animated the empty to illustrate the issue. For some frames, the mirrored Suzannes match, for some they do not.

I wrote a patch.
See D8188

I wrote a patch. See [D8188](https://archive.blender.org/developer/D8188)

This issue was referenced by a07922159d

This issue was referenced by a07922159d4abfeaca4db9b3f08b3f85e3a35ca9
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#78527
No description provided.