Fix T78527: GPencil Mirror modifier is inconsistent with Mesh Mirror

The grease pencil mirror was using the current axis rotation but the mesh modifier doesn't use it.